k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myspace-service
  labels:
    app: myspace
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: myspace
